Bug 166255 - Folders in folders panel will not expand after navigating the tree using the details/icons view
Summary: Folders in folders panel will not expand after navigating the tree using the ...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-10 21:49 UTC by Marcelo Sales
Modified: 2008-07-11 00:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcelo Sales 2008-07-10 21:49:24 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

Using KDE 4.0.85.
When one navigates the directory tree by clicking folders in details or icons view, the corresponding folders in folders panel do not expand themselves automatically. Also, once this is done, it's not possible to expand the folder in folders panel manually neither. This do not happen when navigating using the columns view.

To reproduce:
1. Expand your home directory in folders panel and select it
2. In details view, double-click any directory which has more subdirectories inside (say, Documents). Notice that the Documents folder in folder panel do not automatically expand, although you have entered this directory in details view
3. In details view, double-click any subdirectory of the first one (say, "text documents"). Notice that the Documents folder in folder panel do not automatically expand, although you have just entered one of its subdirectories
4. Now try to expand the first directory (Documents) manually in folder panel, clicking on the plus sign next to it. Notice that the plus sign turns into a minus, but the folder will not expand. Now it's necessary to close and reopen Dolphin to get this folder to expand.

The same happens using icons view, but not using columns view.
Comment 1 Peter Penz 2008-07-10 22:32:09 UTC
Thanks for your report! A fix has already been made by David Faure for this and after some tests it hopefully should get applied during the next days (@David: its your fix-of-the-month-fix in kdirlister/kdirmodel :-))
Comment 2 David Faure 2008-07-11 00:08:40 UTC
SVN commit 830654 by dfaure:

Fix delayed emission of cached items in KDirLister so that it emits the right items
(those that were known at the time of the listDir, which fixes a few race conditions),
and so that we remember that this dirlister is currently listing that dir
(otherwise the cache could be deleted, or the internal data structures
inconsistent, leading to a crash on exit).

This fixes dolphin's folder panel not following navigation in the icon view.
BUG: 166255


 M  +27 -26    kio/kdirlister.cpp  
 M  +8 -3      kio/kdirlister_p.h  
 M  +3 -4      kio/kdirmodel.cpp  
 M  +18 -29    tests/kdirlistertest.cpp  
 M  +2 -0      tests/kdirlistertest.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=830654
Comment 3 Marcelo Sales 2008-07-11 00:16:12 UTC
Wow, I'm impressed with your bug terminating speed!! :D
Congratulations, keep up with the good work, Dolphin is a great application.