Fix delayed emission of cached items in KDirLister so that it emits the right items (those that were known at the time of the listDir, which fixes a few race conditions), and so that we remember that this dirlister is currently listing that dir (otherwise the cache could be deleted, or the internal data structures inconsistent, leading to a crash on exit).

This fixes dolphin's folder panel not following navigation in the icon view.
BUG: 166255

svn path=/trunk/KDE/kdelibs/; revision=830654